# rustyrays

./: .gitignore  Cargo.toml  README.md
src/: aabb.rs  camera.rs  color.rs  common.rs  distributions.rs  integrator.rs  interaction.rs  light.rs  main.rs  material.rs  matrix.rs  media.rs  mesh.rs  onb.rs  primitive.rs  quaternion.rs  ray.rs  rng.rs  sampler.rs  scene.rs  shape.rs  sphere.rs  tests.rs  texture.rs  transform.rs  trianglemesh.rs  vector.rs
