[package]
name = "rustyrays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9.0"
beryllium = { version = "0.7", features = ["use-raw-window-handle"] }
env_logger = "0.9"
fermium = { version = "20016.1.1", default-features = false }
log = "0.4"
zstring = "0.1"
nalgebra-glm = "0.16.0"
nalgebra = "0.30.1"
rand = "0.8.4"
rand_distr = "0.4.2"
tobj = "3.2.0"
bumpalo-herd = "0.1.1"
rayon = "1.5.1"

[profile.release]
debug = true