[package]
name = "rustyrays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
nalgebra-glm = "0.16.0"
nalgebra = "0.30.1"
rand = "0.8.4"
rand_distr = "0.4.2"
bumpalo-herd = "0.1.1"

[profile.release]
debug = true