[package]
name = "rustyrays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.12.0"
winit = "0.28.3"
winit_input_helper = "0.14.1"
env_logger = "0.10"
log = "0.4"
nalgebra-glm = "0.18.0"
nalgebra = "0.32.2"
rand = "0.8.4"
rand_distr = "0.4.2"
bumpalo-herd = "0.1.1"
rayon = "1.7.0"

[profile.release]
debug = true